--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.main.allow-bean-definition-overriding=true
 
-spring.redis.port=26379
-spring.cache.redis.cache-null-values=true
+#punya ko raymond
+#spring.redis.port=26379
+#spring.cache.redis.cache-null-values=true
+
+#Redis untuk Demo Arch Comm
+spring.redis.host=localhost
+spring.redis.port=6379
